# Re-Verse

./: .gitignore  .pre-commit-config.yaml  README-DEPLOYMENT.md  README.md  docker-compose.prod.yml  docker-compose.yml  edit_enemies.py  edit_itmes.py  edit_map_villager.py  pyproject.toml  vercel.json
.github/workflows/: ci.yml  deploy.yml  discord.yml  test.yml
app/backend/: main.py
app/backend/api/v1/: __init__.py  router.py
app/backend/api/v1/endpoints/: llm.py
app/backend/core/: config.py
app/backend/schemas/: llm.py
app/backend/services/: llm_service.py
app/backend/services/json_modify_tools/: __init__.py  dispatcher.py  edit_enemies.py  edit_items.py  edit_levels.py  edit_map_villager.py  edit_skills.py
app/frontend/: index.html  package-lock.json  package.json  vite.config.js
app/frontend/public/rpgmaker/: index.html  package.json
app/frontend/public/rpgmaker/data/: Actors.json  (+10 more)
app/frontend/src/: App.jsx
app/frontend/src/pages/: GameEditor.jsx  Home.jsx  NotFound.jsx
app/frontend/src/services/: api.js  llmApi.js
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
storage/games/game_001/: game.rmmzproject  index.html  package.json
storage/games/game_001/data/: Actors.json  Animations.json  Armors.json  Classes.json  CommonEvents.json  Enemies.json  Items.json  Map001.json  Map002.json  Map003.json  Map004.json  Map005.json  Map006.json  Map007.json  Map008.json  MapInfos.json  Skills.json  States.json  System.json  Tilesets.json  Troops.json  Weapons.json
storage/games/game_001/save/: file0.rmmzsave  global.rmmzsave
(+10 files in other folders)
