[project]
name = "re-verse"
version = "0.1.0"
description = "AI-powered RPG game creation tool using natural language"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "loguru>=0.7.0",
    "websockets>=13.0",
    "supabase>=2.7.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langsmith>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pre-commit>=4.5.1",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    ".venv",
    "uv.lock",
    "app/frontend",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
exclude = ["app/frontend", "storage"]
mypy_path = "."
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = "backend.*"
follow_imports = "skip"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/backend/tests", "agent/tests"]

[tool.hatch.build.targets.wheel]
packages = ["agent", "app/backend", "shared"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
